# indexing

./: .gitignore  CMakeLists.txt  README.md  main.cpp  script.py
include/: boundary_analysis.hpp  count_token_usage.hpp  indexing_thread_worker.hpp  merging_thread_worker.hpp  mqueue.hpp  read_from_path.hpp  reading_thread.hpp
src/: boundary_analysis.cpp  count_token_usage.cpp  indexing_thread_worker.cpp  merging_thread_worker.cpp  mqueue.cpp  read_from_path.cpp  reading_thread.cpp
testdir/: a.txt  b.txt  g.txt  m.txt
